--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,3 @@
-CHANGES IN VERSION 0.99.x
------------------------
-Init version
-
-27 tools was collected.
-
-(start date: 2019-03-26)
+Changes in version 0.99.10 (2019-03-27)
++ Submitted to Bioconductor
++ 27 tools were collected.
