add 10 more tools

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
 Changes in version 0.99.10 (2019-03-27)
 + Submitted to Bioconductor
 + 27 tools were collected.
+
+Changes in version 0.99.11 (2019-03-27)
++ 10 more tools were added.
