--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.1.1 (2019-05-06)
++ fix mc3 path bug.
+
 Changes in version 0.99.10 (2019-03-27)
 + Submitted to Bioconductor
 + 27 tools were collected.
