update Step to cwlStep

--- a/vignettes/RcwlPipelines.Rmd
+++ b/vignettes/RcwlPipelines.Rmd
@@ -118,27 +118,27 @@ marked alignments.
 
 ```{r}
 ## bwa
-s1 <- Step(id = "bwa", run = bwa,
+s1 <- cwlStep(id = "bwa", run = bwa,
            In = list(threads = "threads",
                      RG = "RG",
                      Ref = "Ref",
                      FQ1 = "FQ1",
                      FQ2 = "FQ2"))
 ## sam to bam
-s2 <- Step(id = "sam2bam", run = sam2bam,
+s2 <- cwlStep(id = "sam2bam", run = sam2bam,
            In = list(sam = "bwa/sam"))
 ## sort bam
-s3 <- Step(id = "sortBam", run = sortBam,
+s3 <- cwlStep(id = "sortBam", run = sortBam,
            In = list(bam = "sam2bam/bam"))
 ## mark duplicates
-s4 <- Step(id = "markdup", run = markdup,
+s4 <- cwlStep(id = "markdup", run = markdup,
            In = list(ibam = "sortBam/sbam",
                      obam = list(
                          valueFrom="$(inputs.ibam.nameroot).mdup.bam"),
                      matrix = list(
                          valueFrom="$(inputs.ibam.nameroot).markdup.txt")))
 ## index bam
-s5 <- Step(id = "idxBam", run = samtools_index,
+s5 <- cwlStep(id = "idxBam", run = samtools_index,
            In = list(bam = "markdup/mBam"))
 ```
 
